[button] refactor (color picker): fix spacing between color picker elements.

--- a/packages/plugin-button/statics/styles/color-picker.scss
+++ b/packages/plugin-button/statics/styles/color-picker.scss
@@ -94,7 +94,6 @@ $size: 10px;
 .palettes {
   width: 100%;
   text-align: right;
-  padding-bottom: 17px;
   padding-top: 18px;
   @include phone {
     padding-top: 31px;
