--- a/packages/plugin-button/statics/styles/custom-color-picker.scss
+++ b/packages/plugin-button/statics/styles/custom-color-picker.scss
@@ -1,6 +1,10 @@
 @import "~wix-rich-content-common/dist/statics/styles/mixins";
 @import "~wix-rich-content-common/dist/statics/styles/palette";
 
+
+.container{
+  padding-top: 15px; 
+}
 .editable_input_label {
   @include phone {
     padding-top: 13px;
